--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -12,7 +12,7 @@
     </head>
     <body>
         <header class="container-fluid py-3 px-4  pb-4 d-flex flex-row justify-content-between align-items-center">
-            <img src="{{ url_for('static', filename='img/logo.png') }}" onerror="this.onerror=null;this.src='../static/img/logo.png';" width="150px" alt="Imagem">
+            <img onclick="location.href='/'" src="{{ url_for('static', filename='img/logo.png') }}" onerror="this.onerror=null;this.src='../static/img/logo.png';" width="150px" alt="Imagem">
             <svg onclick="location.href='/logout'" xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-box-arrow-right text-danger" viewBox="0 0 16 16">
                 <path fill-rule="evenodd" d="M10 12.5a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v2a.5.5 0 0 0 1 0v-2A1.5 1.5 0 0 0 9.5 2h-8A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-2a.5.5 0 0 0-1 0z"/>
                 <path fill-rule="evenodd" d="M15.854 8.354a.5.5 0 0 0 0-.708l-3-3a.5.5 0 0 0-.708.708L14.293 7.5H5.5a.5.5 0 0 0 0 1h8.793l-2.147 2.146a.5.5 0 0 0 .708.708z"/>
@@ -67,7 +67,7 @@
             <span style="color: #768192;" class="mt-2">Realizadas hoje</span>
             <!-- Button trigger modal -->
              {% if ( user.evaluations_today >= 16 ) %}
-                <button class="btn btn-secondary mt-3" disabled>FAZER AVALIAÇÕES</button>
+                <button class="btn btn-secondary mt-3" disabled>AGUARDE</button>
                 {% else %}
                 <button class="btn btn-primary mt-3" onclick="location.href='/rating'">FAZER AVALIAÇÕES</button>
              {% endif %}
