Message limite rate updated

--- a/templates/rating.html
+++ b/templates/rating.html
@@ -63,7 +63,7 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    Limite diário de avaliações atingida! Volte amanhã para continuar.
+                    Por ser um novo usuário, sua conta é limitada! Mas não se preocupe! Após 15 dias de uso, sua conta será ilimitada! Volte amanhã para continuar.
                 </div>
                 <div class="modal-footer">
                     <button type="button" onclick="location.href='/dashboard'" class="btn btn-primary" data-bs-dismiss="modal">Entendi</button>
