--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -22,21 +22,21 @@
         <!-- SALDO ATUAL -->
         <div class="container mt-3 mx-auto containerData bg-box text-light">
             <div id="title-content" class="d-flex flex-row justify-content-between align-items-center">
-                <span style="color: #768192;">Saldo atual</span>
+                <span style="color: #768192;" id="saldo-currency">Saldo atual</span>
                 <svg style="color: aqua;" xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-wallet" viewBox="0 0 16 16">
                     <path d="M0 3a2 2 0 0 1 2-2h13.5a.5.5 0 0 1 0 1H15v2a1 1 0 0 1 1 1v8.5a1.5 1.5 0 0 1-1.5 1.5h-12A2.5 2.5 0 0 1 0 12.5zm1 1.732V12.5A1.5 1.5 0 0 0 2.5 14h12a.5.5 0 0 0 .5-.5V5H2a2 2 0 0 1-1-.268M1 3a1 1 0 0 0 1 1h12V2H2a1 1 0 0 0-1 1"/>
                 </svg>
             </div>
             <h2><b>${{ user.balance }}</b></h2>
-            <span style="color: #768192;" class="mt-2">Disponível para retirar</span>
+            <span style="color: #768192;" class="mt-2" id="legends-saldo-currency">Disponível para retirar</span>
             <!-- Button trigger modal -->
-            <button class="btn bg-btn mt-3" data-bs-toggle="modal" data-bs-target="#staticBackdrop">REALIZAR SAQUE</button>
+            <button class="btn bg-btn mt-3" data-bs-toggle="modal" data-bs-target="#staticBackdrop" id="do-saque">REALIZAR SAQUE</button>
         </div>
 
         <!-- SAQUES EM ANÁLISES -->
         <div class="container mt-3 mx-auto containerData bg-box text-light">
             <div id="title-content" class="d-flex flex-row justify-content-between align-items-center">
-                <span style="color: #768192;">Saques em análises</span>
+                <span style="color: #768192;" id="analysis">Saques em análises</span>
                 <svg style="color: #fbff00;" xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-clock-history" viewBox="0 0 16 16">
                     <path d="M8.515 1.019A7 7 0 0 0 8 1V0a8 8 0 0 1 .589.022zm2.004.45a7 7 0 0 0-.985-.299l.219-.976q.576.129 1.126.342zm1.37.71a7 7 0 0 0-.439-.27l.493-.87a8 8 0 0 1 .979.654l-.615.789a7 7 0 0 0-.418-.302zm1.834 1.79a7 7 0 0 0-.653-.796l.724-.69q.406.429.747.91zm.744 1.352a7 7 0 0 0-.214-.468l.893-.45a8 8 0 0 1 .45 1.088l-.95.313a7 7 0 0 0-.179-.483m.53 2.507a7 7 0 0 0-.1-1.025l.985-.17q.1.58.116 1.17zm-.131 1.538q.05-.254.081-.51l.993.123a8 8 0 0 1-.23 1.155l-.964-.267q.069-.247.12-.501m-.952 2.379q.276-.436.486-.908l.914.405q-.24.54-.555 1.038zm-.964 1.205q.183-.183.35-.378l.758.653a8 8 0 0 1-.401.432z"/>
                     <path d="M8 1a7 7 0 1 0 4.95 11.95l.707.707A8.001 8.001 0 1 1 8 0z"/>
@@ -44,7 +44,7 @@
                 </svg>
             </div>
             <h2><b>${{ user.withdrawn }}</b></h2>
-            <span style="color: #768192;" class="mt-2">Aguardando aprovação</span>
+            <span style="color: #768192;" class="mt-2" id="legends-analysis">Aguardando aprovação</span>
         </div>
 
         <!-- Avaliações -->
@@ -54,35 +54,35 @@
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-info-circle-fill mx-1" viewBox="0 0 16 16">
                         <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16m.93-9.412-1 4.705c-.07.34.029.533.304.533.194 0 .487-.07.686-.246l-.088.416c-.287.346-.92.598-1.465.598-.703 0-1.002-.422-.808-1.319l.738-3.468c.064-.293.006-.399-.287-.47l-.451-.081.082-.381 2.29-.287zM8 5.5a1 1 0 1 1 0-2 1 1 0 0 1 0 2"/>
                     </svg>
-                    Limite diário de avaliações atingida! Volte amanhã para continuar.
+                    <span id="limit-day-alert">Limite diário de avaliações atingida! Volte amanhã para continuar.</span>
                 </div>
             {% endif %}
             <div id="title-content" class="d-flex flex-row justify-content-between align-items-center">
-                <span style="color: #768192;">Avaliações</span>
+                <span style="color: #768192;" id="avaluations">Avaliações</span>
                 <svg style="color: #ff0000;" xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-heart-fill" viewBox="0 0 16 16">
                   <path fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314"/>
                 </svg>
             </div>
             <h2><b>{{ user.evaluations_today }}</b></h2>
-            <span style="color: #768192;" class="mt-2">Realizadas hoje</span>
+            <span style="color: #768192;" class="mt-2" id="legendas-avaluations">Realizadas hoje</span>
             <!-- Button trigger modal -->
              {% if ( user.evaluations_today >= 16 ) %}
-                <button class="btn btn-secondary mt-3" disabled>AGUARDE</button>
+                <button class="btn btn-secondary mt-3" disabled id="wait">AGUARDE</button>
                 {% else %}
-                <button class="btn btn-primary mt-3" onclick="location.href='/rating'">FAZER AVALIAÇÕES</button>
+                <button class="btn btn-primary mt-3" onclick="location.href='/rating'" id="do-avaluations">FAZER AVALIAÇÕES</button>
              {% endif %}
         </div>
 
         <!-- Faturamento -->
         <div class="container mt-3 mx-auto containerData bg-box text-light">
             <div id="title-content" class="d-flex flex-row justify-content-between align-items-center">
-                <span style="color: #768192;">Faturamento</span>
+                <span style="color: #768192;" id="receit">Faturamento</span>
                 <svg style="color: #1db954;" xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-currency-dollar" viewBox="0 0 16 16">
                     <path d="M4 10.781c.148 1.667 1.513 2.85 3.591 3.003V15h1.043v-1.216c2.27-.179 3.678-1.438 3.678-3.3 0-1.59-.947-2.51-2.956-3.028l-.722-.187V3.467c1.122.11 1.879.714 2.07 1.616h1.47c-.166-1.6-1.54-2.748-3.54-2.875V1H7.591v1.233c-1.939.23-3.27 1.472-3.27 3.156 0 1.454.966 2.483 2.661 2.917l.61.162v4.031c-1.149-.17-1.94-.8-2.131-1.718zm3.391-3.836c-1.043-.263-1.6-.825-1.6-1.616 0-.944.704-1.641 1.8-1.828v3.495l-.2-.05zm1.591 1.872c1.287.323 1.852.859 1.852 1.769 0 1.097-.826 1.828-2.2 1.939V8.73z"/>
                 </svg>
             </div>
             <h2><b>${{ user.earned_today }}</b></h2>
-            <span style="color: #768192;" class="mt-2">Gerado hoje</span>
+            <span style="color: #768192;" class="mt-2" id="legends-receit">Gerado hoje</span>
         </div>
 
         <footer style="height: 100px; color: transparent;">.</footer>
@@ -105,6 +105,7 @@
             </div>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
-        <script src="../static/js/login.js" defer></script>
+        <script src="../static/js/lang-dashboard.js" defer></script> <!-- Live Server -->
+        <script src="{{ url_for('static', filename='js/lang-dashboard.js') }}" defer></script> <!-- Flask -->
     </body>
 </html>
